Add or update stage key in manifest.json (#2431)

--- a/music_assistant/providers/apple_music/manifest.json
+++ b/music_assistant/providers/apple_music/manifest.json
@@ -1,7 +1,7 @@
 {
   "type": "music",
   "domain": "apple_music",
-  "stage": "beta",
+  "stage": "stable",
   "name": "Apple Music",
   "description": "Stream Apple Music’s full catalogue and playlists.",
   "codeowners": ["@MarvinSchenkel"],
