--- a/music_assistant/providers/ard_audiothek/manifest.json
+++ b/music_assistant/providers/ard_audiothek/manifest.json
@@ -6,5 +6,6 @@
   "codeowners": ["@jfeil"],
   "requirements": ["gql[all]==4.0.0"],
   "documentation": "https://music-assistant.io/music-providers/ard-audiothek/",
-  "multi_instance": true
+  "multi_instance": true,
+  "stage": "beta"
 }
