--- a/music_assistant/providers/lrclib/manifest.json
+++ b/music_assistant/providers/lrclib/manifest.json
@@ -1,7 +1,7 @@
 {
   "type": "metadata",
   "domain": "lrclib",
-  "stage": "beta",
+  "stage": "stable",
   "name": "LRCLIB",
   "description": "Primary lyrics provider, delivering synced and unsynced lyrics from the LrcLib database.",
   "codeowners": ["@music-assistant"],
