--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ dependencies = [
   "shortuuid==1.0.13",
   "zeroconf==0.147.2",
   "uv>=0.8.0",
+  "librosa==0.11.0",
+  "llvmlite==0.44.0",
+  "numpy==2.2.6",
   "gql[all]==4.0.0",
 ]
 description = "Music Assistant"
@@ -59,6 +62,7 @@ test = [
   "tomli==2.2.1",
   "ruff==0.12.12",
 ]
+
 
 [project.scripts]
 mass = "music_assistant.__main__:main"
