--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -30,11 +30,14 @@ hass-client==1.2.0
 ibroadcastaio==0.4.0
 ifaddr==0.2.0
 liblistenbrainz==0.6.0
+librosa==0.11.0
+llvmlite==0.44.0
 lyricsgenius==3.7.2
 mashumaro==3.16
 music-assistant-frontend==2.16.1
 music-assistant-models==1.1.60
 mutagen==1.47.0
+numpy==2.2.6
 orjson==3.11.3
 pillow==11.3.0
 pkce==1.0.3
