--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "cryptography==46.0.2",
   "chardet>=5.2.0",
   "ifaddr==0.2.0",
+  "get-mac==0.9.2",
   "mashumaro==3.16",
   "music-assistant-frontend==2.16.6",
   "music-assistant-models==1.1.62",
