--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -25,6 +25,7 @@ cryptography==46.0.2
 deezer-python-async==0.3.0
 defusedxml==0.7.1
 duration-parser==1.0.1
+get-mac==0.9.2
 gql[all]==4.0.0
 hass-client==1.2.0
 ibroadcastaio==0.4.0
