More changes to our github workflows

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -12,7 +12,7 @@ categories:
     labels:
       - 'new-provider'
 
-  - title: "🚀 Features"
+  - title: "🚀 Features and enhancements"
     labels:
       - 'feature'
       - 'enhancement'
