--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -222,10 +222,10 @@ jobs:
               # Try to find previous nightly
               PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.dev[0-9]+$' | head -n 1)
 
-              # If no nightly found, fall back to last prerelease (beta)
+              # If no nightly found, fall back to last beta
               if [ -z "$PREV_TAG" ]; then
-                echo "⚠️  No previous nightly found, falling back to last prerelease"
-                PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.(b|dev)[0-9]+$' | head -n 1)
+                echo "⚠️  No previous nightly found, falling back to last beta"
+                PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.b[0-9]+$' | head -n 1)
               fi
               ;;
           esac
