--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -219,19 +219,12 @@ jobs:
               PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.b[0-9]+$' | head -n 1)
               ;;
             nightly)
-              # Try to find previous nightly
               PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.dev[0-9]+$' | head -n 1)
-
-              # If no nightly found, fall back to last beta
-              if [ -z "$PREV_TAG" ]; then
-                echo "⚠️  No previous nightly found, falling back to last beta"
-                PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+\.b[0-9]+$' | head -n 1)
-              fi
               ;;
           esac
 
           if [ -z "$PREV_TAG" ]; then
-            echo "⚠️  No previous $CHANNEL release found (and no fallback available)"
+            echo "⚠️  No previous $CHANNEL release found"
             echo "prev_tag=" >> $GITHUB_OUTPUT
             echo "has_prev_tag=false" >> $GITHUB_OUTPUT
           else
