Fix permission issue on release flow

--- a/.github/workflows/auto-release-nightly.yml
+++ b/.github/workflows/auto-release-nightly.yml
@@ -98,6 +98,10 @@ jobs:
     name: Trigger Release Workflow
     needs: check-and-release
     if: needs.check-and-release.outputs.should_release == 'true'
+    permissions:
+      contents: write
+      pull-requests: read
+      packages: write
     uses: ./.github/workflows/release.yml
     with:
       version: ${{ needs.check-and-release.outputs.version }}
